# WCSPH

./: CMakeLists.txt  README.md  main.cpp
include/: config.cpp  config.h  particle.cpp  particle.h
resources/shaders/: sph.frag  sph.vert
